--- a/index.html
+++ b/index.html
@@ -56,25 +56,29 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Hang Wu</a></sup>,</span>
+                <a href="https://wuhang03.github.io/" target="_blank">Hang Wu</a><sup>{1,3}</sup>,</span>
                 <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Hongkai Chen</a></sup>,</span>
+                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Hongkai Chen</a><sup>{3†}</sup>,</span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Yujun Cai</a></sup>,</span>
+                    <a href="https://vanoracai.github.io/" target="_blank">Yujun Cai</a><sup>{2}</sup>,</span>
                     <span class="author-block">
-                      <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Chang Liu</a></sup>,</span>
+                      <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Chang Liu</a><sup>{3}</sup>,</span>
                       <span class="author-block">
-                        <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Qingwen Ye</a></sup>,</span>
+                        <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Qingwen Ye</a><sup>3</sup>,</span>
                         <span class="author-block">
-                          <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Ming-Hsuan Yang</a></sup>,</span>
+                          <a href="https://faculty.ucmerced.edu/mhyang/" target="_blank">Ming-Hsuan Yang</a><sup>1</sup>,</span>
                           <span class="author-block">
-                            <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Yiwei Wang</a></sup>,</span>
+                            <a href="https://wangywust.github.io/" target="_blank">Yiwei Wang </a><sup>1</sup>,</span>
                   </span>
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Institution Name<br>Conferance name and year</span>
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
+                    <span class="author-block">University of California, Merced<sup>1</sup>, 
+                      The University of Queesnland<sup>2</sup>, 
+                      Vivo<sup>3</sup>,
+                      University of Electronic Science and Technology of China<sup>4</sup>
+                      <!-- <br>Conferance name and year</span> -->
+                    <span class="eql-cntrb"><small><br><sup>†</sup>Indicates Corresponding Author</small></span>
                   </div>
 
                   <div class="column has-text-centered">
