--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <video poster="" id="tree" autoplay controls muted loop height="100%">
-        <!-- Your video here -->
+      <!-- <video poster="" id="tree" autoplay controls muted loop height="100%">
+        Your video here -->
         <!-- <source src="static/videos/banner_video.mp4" type="video/mp4"> -->
-        <source src="static/images/teaser.pdf" type="images/pdf">
-      </video>
+      <!-- </video> --> 
+      <img src="static/images/teaser.pdf" alt="Teaser Image" class="teaser-image">
       <h2 class="subtitle has-text-centered">
         DiMo-GUI searches separately within the text and icon elements based on the instruction and the screenshot.
       </h2>
