--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
         Your video here -->
         <!-- <source src="static/videos/banner_video.mp4" type="video/mp4"> -->
       <!-- </video> --> 
-      <img src="static/images/teaser.pdf" alt="Teaser Image" class="teaser-image">
+      <!-- <img src="static/images/teaser.pdf" alt="Teaser Image" class="teaser-image"> -->
+      <iframe src="static/images/teaser.pdf" width="100%" height="600px"></iframe>
       <h2 class="subtitle has-text-centered">
         DiMo-GUI searches separately within the text and icon elements based on the instruction and the screenshot.
       </h2>
