--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         Your video here -->
         <!-- <source src="static/videos/banner_video.mp4" type="video/mp4"> -->
       <!-- </video> --> 
-      <img src="static/images/teaser.png" alt="Teaser Image" class="teaser-image" width="100%">
+      <img src="static/images/teaser.png" alt="Teaser Image" class="teaser-image" width="70%">
       <h2 class="subtitle has-text-centered">
         DiMo-GUI searches separately within the text and icon elements based on the instruction and the screenshot.
       </h2>
@@ -169,6 +169,26 @@
 </section>
 <!-- End paper abstract -->
 
+
+<!-- framework -->
+<section class="hero is-small is-light">
+  <div class="hero-body">
+    <div class="container">
+      <!-- Paper video. -->
+      <h2 class="title is-3">Video Presentation</h2>
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-four-fifths">
+          
+          <div class="publication-video">
+            <!-- Youtube embed code here -->
+            <iframe src="https://www.youtube.com/embed/JkaxUblCGz0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End framework -->
 
 <!-- Image carousel -->
 <section class="hero is-small">
@@ -210,27 +230,6 @@
 <!-- End image carousel -->
 
 
-
-
-<!-- Youtube video -->
-<section class="hero is-small is-light">
-  <div class="hero-body">
-    <div class="container">
-      <!-- Paper video. -->
-      <h2 class="title is-3">Video Presentation</h2>
-      <div class="columns is-centered has-text-centered">
-        <div class="column is-four-fifths">
-          
-          <div class="publication-video">
-            <!-- Youtube embed code here -->
-            <iframe src="https://www.youtube.com/embed/JkaxUblCGz0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- End youtube video -->
 
 
 <!-- Video carousel -->
