--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 </section>
 
 
-<!-- Teaser video-->
+<!-- Teaser -->
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
@@ -143,14 +143,17 @@
         Your video here -->
         <!-- <source src="static/videos/banner_video.mp4" type="video/mp4"> -->
       <!-- </video> --> 
-      <img src="static/images/teaser.png" alt="Teaser Image" class="teaser-image" width="70%">
+      <div class="image-container">
+        <img src="static/images/teaser.png" alt="Teaser Image" class="teaser-image">
+        <img src="static/images/radar.png" alt="Radar Image" class="teaser-image">
+      </div>
       <h2 class="subtitle has-text-centered">
         DiMo-GUI searches separately within the text and icon elements based on the instruction and the screenshot.
       </h2>
     </div>
   </div>
 </section>
-<!-- End teaser video -->
+<!-- End teaser -->
 
 <!-- Paper abstract -->
 <section class="section hero is-light">
@@ -190,7 +193,7 @@
 </section>
 <!-- End framework -->
 
-<!-- Image carousel -->
+<!-- Experimental Results -->
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
@@ -227,12 +230,12 @@
 </div>
 </div>
 </section>
-<!-- End image carousel -->
+<!-- End experimental results -->
 
 
 
 
-<!-- Video carousel -->
+<!--  Qualitative Results -->
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
@@ -263,7 +266,7 @@
     </div>
   </div>
 </section>
-<!-- End video carousel -->
+<!-- End qualitative results -->
 
 
 
