--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
         <!-- <source src="static/videos/banner_video.mp4" type="video/mp4"> -->
       <!-- </video> --> 
       <div class="image-container">
-        <img src="static/images/teaser.png" alt="Teaser Image" class="teaser-image">
-        <img src="static/images/radar.png" alt="Radar Image" class="teaser-image">
+        <img src="static/images/teaser.png" alt="Teaser Image" class="teaser-image" width="40%">
+        <img src="static/images/radar.png" alt="Radar Image" class="teaser-image" width="60%">
       </div>
       <h2 class="subtitle has-text-centered">
         DiMo-GUI searches separately within the text and icon elements based on the instruction and the screenshot.
