--- a/index.html
+++ b/index.html
@@ -143,10 +143,7 @@
         Your video here -->
         <!-- <source src="static/videos/banner_video.mp4" type="video/mp4"> -->
       <!-- </video> --> 
-      <div class="image-container">
-        <img src="static/images/teaser.png" alt="Teaser Image" class="teaser-image" width="30%">
-        <img src="static/images/radar.png" alt="Radar Image" class="teaser-image" width="60%">
-      </div>
+      <embed src="static/images/teaser.pdf" type="application/pdf" width="60%"/>
       <h2 class="subtitle has-text-centered">
         DiMo-GUI searches separately within the text and icon elements based on the instruction and the screenshot.
       </h2>
@@ -178,13 +175,12 @@
   <div class="hero-body">
     <div class="container">
       <!-- Paper video. -->
-      <h2 class="title is-3">Video Presentation</h2>
+      <h2 class="title is-3">Framework</h2>
       <div class="columns is-centered has-text-centered">
         <div class="column is-four-fifths">
           
           <div class="publication-video">
-            <!-- Youtube embed code here -->
-            <iframe src="https://www.youtube.com/embed/JkaxUblCGz0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <img src="static/images/framework.png" alt="Framework Image" class="framework-image">
           </div>
         </div>
       </div>
