--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         Your video here -->
         <!-- <source src="static/videos/banner_video.mp4" type="video/mp4"> -->
       <!-- </video> --> 
-      <img src="static/images/teaser.jpg" alt="Teaser Image" class="teaser-image">
+      <img src="static/images/teaser.jpg" alt="Teaser Image" class="teaser-image" width="40%" style="display: block; margin: 0 auto;">
       <h2 class="subtitle has-text-centered">
         DiMo-GUI searches separately within the text and icon elements based on the instruction and the screenshot.
       </h2>
