--- a/index.html
+++ b/index.html
@@ -147,6 +147,11 @@
       <h2 class="subtitle has-text-centered">
         DiMo-GUI searches separately within the text and icon elements based on the instruction and the screenshot.
       </h2>
+
+      <img src="static/images/radar.jpg" alt="Radar Image" class="radar-image" width="40%" style="display: block; margin: 0 auto;">
+      <h2 class="subtitle has-text-centered">
+        By integrating DiMo-GUI, existing models can achieve significant performance improvements on ScreenSpot-Pro benchmark.
+      </h2>
     </div>
   </div>
 </section>
