--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         DiMo-GUI searches separately within the text and icon elements based on the instruction and the screenshot.
       </h2>
 
-      <img src="static/images/radar.jpg" alt="Radar Image" class="radar-image" width="40%" style="display: block; margin: 0 auto;">
+      <img src="static/images/radar.png" alt="Radar Image" class="radar-image" width="40%" style="display: block; margin: 0 auto;">
       <h2 class="subtitle has-text-centered">
         By integrating DiMo-GUI, existing models can achieve significant performance improvements on ScreenSpot-Pro benchmark.
       </h2>
