--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
                   <div class="is-size-5 publication-authors">
                     <span class="author-block">University of California, Merced<sup>1</sup>, 
                       The University of Queesnland<sup>2</sup>, 
-                      Vivo<sup>3</sup>,
-                      <br>University of Electronic Science and Technology of China<sup>4</sup>
+                      vivo<sup>3</sup>
                       <!-- <br>Conferance name and year</span> -->
                     <span class="eql-cntrb"><small><br><sup>†</sup>Indicates Corresponding Author</small></span>
                   </div>
