--- a/index.html
+++ b/index.html
@@ -80,6 +80,24 @@
                     <span class="eql-cntrb"><small><br><sup>†</sup>Indicates Corresponding Author</small></span>
                   </div>
 
+                  <div class="columns is-centered" style="width: 100%; margin: 20px 0;">
+                    <div class="column" style="width: 33%; text-align: center;">
+                      <figure class="image">
+                        <img src="static/images/ucmerced.png" alt="UCMerced" style="width: 100%;">
+                      </figure>
+                    </div>
+                    <div class="column" style="width: 33%; text-align: center;">
+                      <figure class="image">
+                        <img src="static/images/UQ.png" alt="Queesnland" style="width: 100%;">
+                      </figure>
+                    </div>
+                    <div class="column" style="width: 33%; text-align: center;">
+                      <figure class="image">
+                        <img src="static/images/vivo.png" alt="vivo" style="width: 100%;">
+                      </figure>
+                    </div>
+                  </div>
+
                   <div class="column has-text-centered">
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
