add institution icons

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                   <div class="is-size-5 publication-authors">
                     <span class="author-block">University of California, Merced<sup>1</sup>, 
                       The University of Queensland<sup>2</sup>, 
-                      vivo<sup>3</sup>
+                      <br>vivo Mobile Communication Co., Ltd<sup>3</sup>
                       <!-- <br>Conferance name and year</span> -->
                     <span class="eql-cntrb"><small><br><sup>†</sup>Indicates Corresponding Author</small></span>
                   </div>
@@ -88,7 +88,7 @@
                     </div>
                     <div class="column" style="width: 33%; text-align: center;">
                       <figure class="image">
-                        <img src="static/images/UQ.png" alt="Queesnland" style="width: 90%;">
+                        <img src="static/images/UQ.png" alt="Queesnland" style="width: 85%;">
                       </figure>
                     </div>
                     <div class="column" style="width: 33%; text-align: center;">
