add institution icons

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">University of California, Merced<sup>1</sup>, 
-                      The University of Queensland<sup>2</sup>, 
-                      <br>vivo Mobile Communication Co., Ltd<sup>3</sup>
+                    <span class="author-block"><sup>1</sup>University of California, Merced, 
+                      <sup>2</sup>The University of Queensland, 
+                      <br><sup>3</sup>vivo Mobile Communication Co., Ltd
                       <!-- <br>Conferance name and year</span> -->
                     <span class="eql-cntrb"><small><br><sup>†</sup>Indicates Corresponding Author</small></span>
                   </div>
