add institution icons

--- a/index.html
+++ b/index.html
@@ -219,14 +219,14 @@
     <div class="container">
       <h2 class="title is-3">Quantitative Results</h2>
       <div id="results-carousel" class="carousel results-carousel">
-       <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/table_1.png" alt="MY ALT TEXT"/>
-      </div>
-      <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/table_2.png" alt="MY ALT TEXT"/>
-      </div>
+        <div class="item" style="text-align: center;">
+          <!-- Your image here -->
+          <img src="static/images/table_1.png" alt="MY ALT TEXT" style="display: inline-block;">
+        </div>
+        <div class="item" style="text-align: center;">
+          <!-- Your image here -->
+          <img src="static/images/table_2.png" alt="MY ALT TEXT" style="display: inline-block;">
+        </div>
     </div>
     <h2 class="subtitle has-text-centered">
       You can slide to view more results.
