add institution icons

--- a/index.html
+++ b/index.html
@@ -244,32 +244,23 @@
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
-      <h2 class="title is-3">Another Carousel</h2>
+      <h2 class="title is-3">Quantitative Results</h2>
       <div id="results-carousel" class="carousel results-carousel">
-        <div class="item item-video1">
-          <video poster="" id="video1" autoplay controls muted loop height="100%">
-            <!-- Your video file here -->
-            <source src="static/videos/carousel1.mp4"
-            type="video/mp4">
-          </video>
+        <div class="item" style="text-align: center;">
+          <!-- Your image here -->
+          <img src="static/images/results_1.png" alt="MY ALT TEXT" style="display: inline-block;">
         </div>
-        <div class="item item-video2">
-          <video poster="" id="video2" autoplay controls muted loop height="100%">
-            <!-- Your video file here -->
-            <source src="static/videos/carousel2.mp4"
-            type="video/mp4">
-          </video>
+        <div class="item" style="text-align: center;">
+          <!-- Your image here -->
+          <img src="static/images/results_2.png" alt="MY ALT TEXT" style="display: inline-block;">
         </div>
-        <div class="item item-video3">
-          <video poster="" id="video3" autoplay controls muted loop height="100%">\
-            <!-- Your video file here -->
-            <source src="static/videos/carousel3.mp4"
-            type="video/mp4">
-          </video>
-        </div>
-      </div>
     </div>
+    <h2 class="subtitle has-text-centered">
+      You can slide to view more results.
+    </h2>
   </div>
+</div>
+</div>
 </section>
 <!-- End qualitative results -->
 
@@ -279,7 +270,7 @@
 
 
 <!-- Paper poster -->
-<section class="hero is-small is-light">
+<!-- <section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
       <h2 class="title">Poster</h2>
@@ -289,7 +280,7 @@
         
       </div>
     </div>
-  </section>
+  </section> -->
 <!--End paper poster -->
 
 
