add institution icons

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         <div class="column is-four-fifths">
           
           <div class="publication-video">
-            <img src="static/images/framework.png" alt="Framework Image" class="framework-image">
+            <img src="static/images/framework.png" alt="Framework Image" class="framework-image" style="max-width: 100%; height: auto;">
           </div>
         </div>
       </div>
